fix workdingDir